Fix stars alignment

--- a/client/src/Pages/PlacesAddedByUserPage/AddNewPlaceForm/AddNewPlaceForm.scss
+++ b/client/src/Pages/PlacesAddedByUserPage/AddNewPlaceForm/AddNewPlaceForm.scss
@@ -4,5 +4,5 @@
 
 .button-wrapper {
   float: right;
-  margin-top: 100px;
+  margin-top: 125px;
 }
